handle \cprime issue.

--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 3c2549383d68cd3a22f99b835f4646800ea1ab19
+% Commit: 26437325f6362b5ddcdc7e1fa50408d4e287fd7e
 % Date: 2023-06-21
 % ---------------------------
 
@@ -847,7 +847,7 @@
   issn		= {0003-486X},
   mrclass	= {35L70 (35B05)},
   mrnumber	= {1680539},
-  mrreviewer	= {Nickolai A. Lar\cprime kin},
+  mrreviewer	= {Nickolai A. Lar{\cprime}kin},
   doi		= {10.2307/121020},
   url		= {https://doi.org/10.2307/121020}
 }
@@ -1336,7 +1336,7 @@
   issn		= {0304-4149},
   mrclass	= {60H10 (92A15)},
   mrnumber	= {656280},
-  mrreviewer	= {Ya. \={I}. B\={i}lopol\cprime s\cprime ka},
+  mrreviewer	= {Ya. \={I}. B\={i}lopol{\cprime}s{\cprime}ka},
   doi		= {10.1016/0304-4149(82)90051-5},
   url		= {https://doi.org/10.1016/0304-4149(82)90051-5}
 }
@@ -2846,7 +2846,7 @@
   issn		= {0894-9840},
   mrclass	= {60F17 (60G51 60G52)},
   mrnumber	= {4091576},
-  mrreviewer	= {Andr\={i}u{i} P. Yurachk\={i}vs\cprime kiu{i}},
+  mrreviewer	= {Andr\={i}u{i} P. Yurachk\={i}vs{\cprime}kiu{i}},
   doi		= {10.1007/s10959-019-00897-x},
   url		= {https://doi.org/10.1007/s10959-019-00897-x}
 }
@@ -6003,7 +6003,7 @@
   issn		= {0178-8051},
   mrclass	= {60H15 (35R60 60F05 82B44)},
   mrnumber	= {1705123},
-  mrreviewer	= {Ya. \={I}. B\={i}lopol\cprime s\cprime ka},
+  mrreviewer	= {Ya. \={I}. B\={i}lopol{\cprime}s{\cprime}ka},
   doi		= {10.1007/s004400050226},
   url		= {https://doi.org/10.1007/s004400050226}
 }
@@ -10895,7 +10895,7 @@
   issn		= {0091-1798},
   mrclass	= {60H15 (35K57 35R60)},
   mrnumber	= {3262479},
-  mrreviewer	= {Vassili N. Kolokol\cprime tsov},
+  mrreviewer	= {Vassili N. Kolokol{\cprime}tsov},
   doi		= {10.1214/13-AOP853},
   url		= {https://doi.org/10.1214/13-AOP853}
 }
@@ -11115,7 +11115,7 @@
   issn		= {0178-8051},
   mrclass	= {60H15 (60J25 70K65)},
   mrnumber	= {3916113},
-  mrreviewer	= {Vassili N. Kolokol\cprime tsov},
+  mrreviewer	= {Vassili N. Kolokol{\cprime}tsov},
   doi		= {10.1007/s00440-018-0839-8},
   url		= {https://doi.org/10.1007/s00440-018-0839-8}
 }
@@ -11442,7 +11442,7 @@
   issn		= {0363-0129},
   mrclass	= {49L20 (60H15 60H40 93E20)},
   mrnumber	= {1871456},
-  mrreviewer	= {Vassili N. Kolokol\cprime tsov},
+  mrreviewer	= {Vassili N. Kolokol{\cprime}tsov},
   doi		= {10.1137/S0363012999359949},
   url		= {https://doi.org/10.1137/S0363012999359949}
 }
@@ -11620,7 +11620,7 @@
   issn		= {1056-2176},
   mrclass	= {35R60 (35K10 47D07)},
   mrnumber	= {1348505},
-  mrreviewer	= {Ya. \={I}. B\={i}lopol\cprime s\cprime ka}
+  mrreviewer	= {Ya. \={I}. B\={i}lopol{\cprime}s{\cprime}ka}
 }
 
 @Article{	  cerrai:96:elliptic,
@@ -11672,7 +11672,7 @@
   issn		= {1083-2564},
   mrclass	= {35R15 (35K99 35R60 47D06 60H15)},
   mrnumber	= {1614630},
-  mrreviewer	= {Ya. \={I}. B\={i}lopol\cprime s\cprime ka}
+  mrreviewer	= {Ya. \={I}. B\={i}lopol{\cprime}s{\cprime}ka}
 }
 
 @Article{	  cerrai:98:kolmogorov,
@@ -11689,7 +11689,7 @@
   issn		= {1083-2564},
   mrclass	= {35R15 (35K99 35R60 47D06 60H15)},
   mrnumber	= {1614634},
-  mrreviewer	= {Ya. \={I}. B\={i}lopol\cprime s\cprime ka}
+  mrreviewer	= {Ya. \={I}. B\={i}lopol{\cprime}s{\cprime}ka}
 }
 
 @Article{	  cerrai:98:some,
@@ -12635,7 +12635,7 @@
   issn		= {0926-2601},
   mrclass	= {60H15 (35K10 35R60 60B15 60H25 60K37)},
   mrnumber	= {3511809},
-  mrreviewer	= {Ya. \={I}. B\={i}lopol\cprime s\cprime ka},
+  mrreviewer	= {Ya. \={I}. B\={i}lopol{\cprime}s{\cprime}ka},
   doi		= {10.1007/s11118-016-9540-7},
   url		= {https://doi.org/10.1007/s11118-016-9540-7}
 }
@@ -13764,8 +13764,8 @@
   title		= {Condition for intersection occupation measure to be
 		  absolutely continuous},
   journal	= {Ukra\"{i}n. Mat. Zh.},
-  fjournal	= {Nats\={i}onal\cprime na Akadem\={i}ya Nauk Ukra\"{i}ni.
-		  \={I}nstitut Matematiki. Ukra\"{i}ns\cprime kiu{i}
+  fjournal	= {Nats\={i}onal{\cprime}na Akadem\={i}ya Nauk Ukra\"{i}ni.
+		  \={I}nstitut Matematiki. Ukra\"{i}ns{\cprime}kiu{i}
 		  Matematichniu{i} Zhurnal},
   volume	= {72},
   year		= {2020},
@@ -13908,7 +13908,7 @@
   issn		= {0894-9840},
   mrclass	= {60B12},
   mrnumber	= {1468400},
-  mrreviewer	= {Nickolai A. Denis\cprime evskiu{i}},
+  mrreviewer	= {Nickolai A. Denis{\cprime}evskiu{i}},
   doi		= {10.1023/A:1022605812085},
   url		= {https://doi.org/10.1023/A:1022605812085}
 }
@@ -15158,7 +15158,7 @@
   issn		= {0010-3616},
   mrclass	= {60H15 (60K35)},
   mrnumber	= {4179723},
-  mrreviewer	= {Ya. \={I}. B\={i}lopol\cprime s\cprime ka},
+  mrreviewer	= {Ya. \={I}. B\={i}lopol{\cprime}s{\cprime}ka},
   doi		= {10.1007/s00220-020-03905-y},
   url		= {https://doi.org/10.1007/s00220-020-03905-y}
 }
@@ -18262,7 +18262,7 @@
   issn		= {0304-4149},
   mrclass	= {60F10 (60G57 60J60 60J70 92D10)},
   mrnumber	= {1815182},
-  mrreviewer	= {Anatolii A. Pukhal\cprime skiu{i}},
+  mrreviewer	= {Anatolii A. Pukhal{\cprime}skiu{i}},
   doi		= {10.1016/S0304-4149(00)00070-3},
   url		= {https://doi.org/10.1016/S0304-4149(00)00070-3}
 }
@@ -18280,7 +18280,7 @@
   issn		= {0304-4149},
   mrclass	= {60F10 (60G57 60J10 92D10)},
   mrnumber	= {1649005},
-  mrreviewer	= {Anatolii A. Pukhal\cprime skiu{i}},
+  mrreviewer	= {Anatolii A. Pukhal{\cprime}skiu{i}},
   doi		= {10.1016/S0304-4149(98)00035-0},
   url		= {https://doi.org/10.1016/S0304-4149(98)00035-0}
 }
@@ -21224,7 +21224,7 @@
   isbn		= {0-471-07672-4},
   mrclass	= {60F10 (60B10 60F17)},
   mrnumber	= {1431744},
-  mrreviewer	= {Anatolii A. Pukhal\cprime skiu{i}},
+  mrreviewer	= {Anatolii A. Pukhal{\cprime}skiu{i}},
   doi		= {10.1002/9781118165904},
   url		= {https://doi.org/10.1002/9781118165904}
 }
@@ -24468,8 +24468,8 @@
   author	= {Galaktionov, V. A. and Kurdyumov, S. P. and Samarskiu{i},
 		  A. A.},
   title		= {A parabolic system of quasilinear equations. {I}},
-  journal	= {Differentsial\cprime nye Uravneniya},
-  fjournal	= {Differentsial\cprime nye Uravneniya},
+  journal	= {Differentsial{\cprime}nye Uravneniya},
+  fjournal	= {Differentsial{\cprime}nye Uravneniya},
   volume	= {19},
   year		= {1983},
   number	= {12},
@@ -24781,8 +24781,8 @@
   author	= {Galaktionov, V. A.},
   title		= {Approximate self-similar solutions of equations of heat
 		  conduction type},
-  journal	= {Differentsial\cprime nye Uravneniya},
-  fjournal	= {Differentsial\cprime nye Uravneniya},
+  journal	= {Differentsial{\cprime}nye Uravneniya},
+  fjournal	= {Differentsial{\cprime}nye Uravneniya},
   volume	= {16},
   year		= {1980},
   number	= {9},
@@ -24797,8 +24797,8 @@
   author	= {Galaktionov, V. A.},
   title		= {A boundary value problem for the nonlinear parabolic
 		  equation {$u_{t}=\Delta u^{\sigma +1}+u^{\beta }$}},
-  journal	= {Differentsial\cprime nye Uravneniya},
-  fjournal	= {Differentsial\cprime nye Uravneniya},
+  journal	= {Differentsial{\cprime}nye Uravneniya},
+  fjournal	= {Differentsial{\cprime}nye Uravneniya},
   volume	= {17},
   year		= {1981},
   number	= {5},
@@ -24814,7 +24814,7 @@
   title		= {Conditions for the absence of global solutions of a class
 		  of quasilinear parabolic equations},
   journal	= {Zh. Vychisl. Mat. i Mat. Fiz.},
-  fjournal	= {Akademiya Nauk SSSR. Zhurnal Vychislitel\cprime nou{i}
+  fjournal	= {Akademiya Nauk SSSR. Zhurnal Vychislitel{\cprime}nou{i}
 		  Matematiki i Matematicheskou{i} Fiziki},
   volume	= {22},
   year		= {1982},
@@ -24832,7 +24832,7 @@
 		  of solutions of the {C}auchy problem for a class of
 		  nonlinear parabolic equations},
   journal	= {Zh. Vychisl. Mat. i Mat. Fiz.},
-  fjournal	= {Akademiya Nauk SSSR. Zhurnal Vychislitel\cprime nou{i}
+  fjournal	= {Akademiya Nauk SSSR. Zhurnal Vychislitel{\cprime}nou{i}
 		  Matematiki i Matematicheskou{i} Fiziki},
   volume	= {23},
   year		= {1983},
@@ -24849,8 +24849,8 @@
   title		= {A proof of the localization of unbounded solutions of the
 		  nonlinear parabolic equation {$u_t=(u^\sigma
 		  u_x)_x+u^\beta$}},
-  journal	= {Differentsial\cprime nye Uravneniya},
-  fjournal	= {Differentsial\cprime nye Uravneniya},
+  journal	= {Differentsial{\cprime}nye Uravneniya},
+  fjournal	= {Differentsial{\cprime}nye Uravneniya},
   volume	= {21},
   year		= {1985},
   number	= {1},
@@ -24927,7 +24927,7 @@
   issn		= {0308-2105},
   mrclass	= {35Q53 (35A30 35C05)},
   mrnumber	= {1331559},
-  mrreviewer	= {B. G. Konopel\cprime chenko},
+  mrreviewer	= {B. G. Konopel{\cprime}chenko},
   doi		= {10.1017/S0308210500028018},
   url		= {https://doi.org/10.1017/S0308210500028018}
 }
@@ -25277,7 +25277,7 @@
 }
 
 @Book{		  gel-fand.shilov:16:generalized,
-  author	= {Gel\cprime fand, I. M. and Shilov, G. E.},
+  author	= {Gel{\cprime}fand, I. M. and Shilov, G. E.},
   title		= {Generalized functions. {V}ol. 1},
   note		= {Properties and operations, Translated from the 1958
 		  Russian original [ MR0097715] by Eugene Saletan, Reprint of
@@ -25293,7 +25293,7 @@
 }
 
 @Book{		  gel-fand.vilenkin:16:generalized,
-  author	= {Gel\cprime fand, I. M. and Vilenkin, N. Ya.},
+  author	= {Gel{\cprime}fand, I. M. and Vilenkin, N. Ya.},
   title		= {Generalized functions. {V}ol. 4},
   note		= {Applications of harmonic analysis, Translated from the
 		  1961 Russian original [ MR0146653] by Amiel Feinstein,
@@ -25309,7 +25309,7 @@
 }
 
 @Article{	  gel-fand:63:some,
-  author	= {Gel\cprime fand, I. M.},
+  author	= {Gel{\cprime}fand, I. M.},
   title		= {Some problems in the theory of quasilinear equations},
   journal	= {Amer. Math. Soc. Transl. (2)},
   fjournal	= {American Mathematical Society Translations},
@@ -26102,7 +26102,7 @@
 
 @Article{	  gorostiza.nualart:94:nuclear,
   author	= {Gorostiza, Luis G. and Nualart, David},
-  title		= {Nuclear {G}el\cprime fand triples on {W}iener space and
+  title		= {Nuclear {G}el{\cprime}fand triples on {W}iener space and
 		  applications to trajectorial fluctuations of particle
 		  systems},
   journal	= {J. Funct. Anal.},
@@ -26717,7 +26717,7 @@
   issn		= {0246-0203},
   mrclass	= {35B27 (35K40 60F05 60G44 60H15 60K37)},
   mrnumber	= {3449303},
-  mrreviewer	= {Taras A. Mel\cprime nyk},
+  mrreviewer	= {Taras A. Mel{\cprime}nyk},
   doi		= {10.1214/14-AIHP637},
   url		= {https://doi.org/10.1214/14-AIHP637}
 }
@@ -29659,7 +29659,7 @@
   issn		= {0091-1798},
   mrclass	= {60J65 (28C20 35K99 60H05)},
   mrnumber	= {490812},
-  mrreviewer	= {A. D. Wentzell (Ventcel\cprime )},
+  mrreviewer	= {A. D. Wentzell (Ventcel{\cprime})},
   url		= {http://links.jstor.org/sici?sici=0091-1798(197806)6:3<433:ASMOPS>2.0.CO;2-N&origin=MSN}
 }
 
@@ -30641,7 +30641,7 @@
   issn		= {0091-1798},
   mrclass	= {60H15 (35K15 35R60 60G22 60H05 60H30)},
   mrnumber	= {2962086},
-  mrreviewer	= {Ya. \={I}. B\={i}lopol\cprime s\cprime ka},
+  mrreviewer	= {Ya. \={I}. B\={i}lopol{\cprime}s{\cprime}ka},
   doi		= {10.1214/11-AOP649},
   url		= {https://doi.org/10.1214/11-AOP649}
 }
@@ -32145,7 +32145,7 @@
   title		= {Schr\"{o}dinger equation with {G}aussian potential},
   journal	= {Teor. u{I}mov\={i}r. Mat. Stat.},
   fjournal	= {Teor\={i}ya u{I}mov\={i}rnosteu{i} ta Matematichna
-		  Statistika. Ki\"{i}vs\cprime kiu{i} Un\={i}versitet
+		  Statistika. Ki\"{i}vs{\cprime}kiu{i} Un\={i}versitet
 		  \={i}meni Tarasa Shevchenka},
   year		= {2018},
   number	= {98},
@@ -34526,7 +34526,7 @@
   issn		= {0002-9939},
   mrclass	= {60H15 (35K20 35R60 60H25 60K37)},
   mrnumber	= {3359595},
-  mrreviewer	= {Vassili N. Kolokol\cprime tsov},
+  mrreviewer	= {Vassili N. Kolokol{\cprime}tsov},
   doi		= {10.1090/S0002-9939-2015-12517-8},
   url		= {https://doi.org/10.1090/S0002-9939-2015-12517-8}
 }
@@ -34544,7 +34544,7 @@
   issn		= {0091-1798},
   mrclass	= {60H15 (35R60 60B15 60H25 60K37)},
   mrnumber	= {3353819},
-  mrreviewer	= {Ya. \={I}. B\={i}lopol\cprime s\cprime ka},
+  mrreviewer	= {Ya. \={I}. B\={i}lopol{\cprime}s{\cprime}ka},
   doi		= {10.1214/14-AOP925},
   url		= {https://doi.org/10.1214/14-AOP925}
 }
@@ -36182,8 +36182,8 @@
   author	= {Kochubeu{i}, A. N.},
   title		= {The {C}auchy problem for evolution equations of fractional
 		  order},
-  journal	= {Differentsial\cprime nye Uravneniya},
-  fjournal	= {Differentsial\cprime nye Uravneniya},
+  journal	= {Differentsial{\cprime}nye Uravneniya},
+  fjournal	= {Differentsial{\cprime}nye Uravneniya},
   volume	= {25},
   year		= {1989},
   number	= {8},
@@ -36197,8 +36197,8 @@
 @Article{	  kochubeui:90:diffusion,
   author	= {Kochubeu{i}, A. N.},
   title		= {Diffusion of fractional order},
-  journal	= {Differentsial\cprime nye Uravneniya},
-  fjournal	= {Differentsial\cprime nye Uravneniya},
+  journal	= {Differentsial{\cprime}nye Uravneniya},
+  fjournal	= {Differentsial{\cprime}nye Uravneniya},
   volume	= {26},
   year		= {1990},
   number	= {4},
@@ -36419,7 +36419,7 @@
 }
 
 @Article{	  kondrat-ev.euidel-man:79:boundary-surface,
-  author	= {Kondrat\cprime ev, V. A. and \`Eu{i}del\cprime man, S. D.},
+  author	= {Kondrat{\cprime}ev, V. A. and \`Eu{i}del{\cprime}man, S. D.},
   title		= {Boundary-surface conditions in the theory of elliptic
 		  boundary value problems},
   journal	= {Dokl. Akad. Nauk SSSR},
@@ -36629,7 +36629,7 @@
 }
 
 @Book{		  kozlov.maz-ya.ea:97:elliptic,
-  author	= {Kozlov, V. A. and Maz\cprime ya, V. G. and Rossmann, J.},
+  author	= {Kozlov, V. A. and Maz{\cprime}ya, V. G. and Rossmann, J.},
   title		= {Elliptic boundary value problems in domains with point
 		  singularities},
   series	= {Mathematical Surveys and Monographs},
@@ -37379,7 +37379,7 @@
 
 @Book{		  ladyzenskaja.solonnikov.ea:68:linear,
   author	= {Lady\v{z}enskaja, O. A. and Solonnikov, V. A. and
-		  Ural\cprime ceva, N. N.},
+		  Ural{\cprime}ceva, N. N.},
   title		= {Linear and quasilinear equations of parabolic type},
   series	= {Translations of Mathematical Monographs, Vol. 23},
   note		= {Translated from the Russian by S. Smith},
@@ -40620,7 +40620,7 @@
 }
 
 @Article{	  maz-ja:67:solvability,
-  author	= {Maz\cprime ja, V. G.},
+  author	= {Maz{\cprime}ja, V. G.},
   title		= {Solvability in {$\dot W_{2}{}^{2}$} of the {D}irichlet
 		  problem in a region with a smooth irregular boundary},
   journal	= {Vestnik Leningrad. Univ.},
@@ -40636,7 +40636,7 @@
 }
 
 @Article{	  maz-ja:73:coercivity,
-  author	= {Maz\cprime ja, V. G.},
+  author	= {Maz{\cprime}ja, V. G.},
   title		= {The coercivity of the {D}irichlet problem in a domain with
 		  irregular boundary},
   journal	= {Izv. Vys\v{s}. U\v{c}ebn. Zaved. Matematika},
@@ -40651,7 +40651,7 @@
 }
 
 @Book{		  maz-ya.shaposhnikova:85:theory,
-  author	= {Maz\cprime ya, V. G. and Shaposhnikova, T. O.},
+  author	= {Maz{\cprime}ya, V. G. and Shaposhnikova, T. O.},
   title		= {Theory of multipliers in spaces of differentiable
 		  functions},
   series	= {Monographs and Studies in Mathematics},
@@ -40662,7 +40662,7 @@
   isbn		= {0-273-08638-3},
   mrclass	= {46E35 (35S05 42B15)},
   mrnumber	= {785568},
-  mrreviewer	= {S. K. Vodop\cprime yanov}
+  mrreviewer	= {S. K. Vodop{\cprime}yanov}
 }
 
 @Article{	  mazliak.nourdin:08:optimal,
@@ -42834,7 +42834,7 @@
   issn		= {0178-8051},
   mrclass	= {60H15},
   mrnumber	= {1180704},
-  mrreviewer	= {Ya. \={I}. B\={i}lopol\cprime s\cprime ka},
+  mrreviewer	= {Ya. \={I}. B\={i}lopol{\cprime}s{\cprime}ka},
   doi		= {10.1007/BF01193055},
   url		= {https://doi.org/10.1007/BF01193055}
 }
@@ -43000,7 +43000,7 @@
   issn		= {0178-8051},
   mrclass	= {60H15 (35K40 35K57 35R60 60J68 60K35)},
   mrnumber	= {2776626},
-  mrreviewer	= {Ya. \={I}. B\={i}lopol\cprime s\cprime ka},
+  mrreviewer	= {Ya. \={I}. B\={i}lopol{\cprime}s{\cprime}ka},
   doi		= {10.1007/s00440-010-0265-z},
   url		= {https://doi.org/10.1007/s00440-010-0265-z}
 }
@@ -43018,7 +43018,7 @@
   issn		= {0178-8051},
   mrclass	= {60H15 (35K55 35R60 60K35)},
   mrnumber	= {1296425},
-  mrreviewer	= {Ya. \={I}. B\={i}lopol\cprime s\cprime ka},
+  mrreviewer	= {Ya. \={I}. B\={i}lopol{\cprime}s{\cprime}ka},
   doi		= {10.1007/BF01199262},
   url		= {https://doi.org/10.1007/BF01199262}
 }
@@ -43359,7 +43359,7 @@
   issn		= {0178-8051},
   mrclass	= {60H15 (35R60)},
   mrnumber	= {1135557},
-  mrreviewer	= {Ya. \={I}. B\={i}lopol\cprime s\cprime ka},
+  mrreviewer	= {Ya. \={I}. B\={i}lopol{\cprime}s{\cprime}ka},
   doi		= {10.1007/BF01192141},
   url		= {https://doi.org/10.1007/BF01192141}
 }
@@ -43447,7 +43447,7 @@
   issn		= {0091-1798},
   mrclass	= {35K20 (35R60 60H15)},
   mrnumber	= {1387640},
-  mrreviewer	= {Ya. \={I}. B\={i}lopol\cprime s\cprime ka},
+  mrreviewer	= {Ya. \={I}. B\={i}lopol{\cprime}s{\cprime}ka},
   doi		= {10.1214/aop/1042644721},
   url		= {https://doi.org/10.1214/aop/1042644721}
 }
@@ -43482,7 +43482,7 @@
   issn		= {0304-4149},
   mrclass	= {60H15 (35K05 35R60)},
   mrnumber	= {1624088},
-  mrreviewer	= {Ya. \={I}. B\={i}lopol\cprime s\cprime ka},
+  mrreviewer	= {Ya. \={I}. B\={i}lopol{\cprime}s{\cprime}ka},
   doi		= {10.1016/S0304-4149(97)00120-8},
   url		= {https://doi.org/10.1016/S0304-4149(97)00120-8}
 }
@@ -44218,24 +44218,6 @@
 
 @Article{	  nane:06:iterated*1,
   author	= {Nane, Erkan},
-  title		= {Iterated {B}rownian motion in bounded domains in
-		  {$\mathbb{R}^n$}},
-  journal	= {Stochastic Process. Appl.},
-  fjournal	= {Stochastic Processes and their Applications},
-  volume	= {116},
-  year		= {2006},
-  number	= {6},
-  pages		= {905--916},
-  issn		= {0304-4149},
-  mrclass	= {60J65},
-  mrnumber	= {2254664},
-  mrreviewer	= {Endre Cs\'{a}ki},
-  doi		= {10.1016/j.spa.2005.10.007},
-  url		= {https://doi.org/10.1016/j.spa.2005.10.007}
-}
-
-@Article{	  nane:06:iterated*2,
-  author	= {Nane, Erkan},
   title		= {Iterated {B}rownian motion in parabola-shaped domains},
   journal	= {Potential Anal.},
   fjournal	= {Potential Analysis. An International Journal Devoted to
@@ -44251,6 +44233,24 @@
   mrreviewer	= {Endre Cs\'{a}ki},
   doi		= {10.1007/s11118-005-2611-9},
   url		= {https://doi.org/10.1007/s11118-005-2611-9}
+}
+
+@Article{	  nane:06:iterated*2,
+  author	= {Nane, Erkan},
+  title		= {Iterated {B}rownian motion in bounded domains in
+		  {$\mathbb{R}^n$}},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {116},
+  year		= {2006},
+  number	= {6},
+  pages		= {905--916},
+  issn		= {0304-4149},
+  mrclass	= {60J65},
+  mrnumber	= {2254664},
+  mrreviewer	= {Endre Cs\'{a}ki},
+  doi		= {10.1016/j.spa.2005.10.007},
+  url		= {https://doi.org/10.1016/j.spa.2005.10.007}
 }
 
 @Article{	  nane:06:laws,
@@ -49678,7 +49678,7 @@
   issn		= {0736-2994},
   mrclass	= {60H15 (35R03 35R60 46E30 60B15 60G60)},
   mrnumber	= {2739599},
-  mrreviewer	= {Ya. \={I}. B\={i}lopol\cprime s\cprime ka},
+  mrreviewer	= {Ya. \={I}. B\={i}lopol{\cprime}s{\cprime}ka},
   doi		= {10.1080/07362994.2010.482840},
   url		= {https://doi.org/10.1080/07362994.2010.482840}
 }
@@ -52007,7 +52007,7 @@
   issn		= {0304-4149},
   mrclass	= {60H15 (60J35)},
   mrnumber	= {3091095},
-  mrreviewer	= {Vassili N. Kolokol\cprime tsov},
+  mrreviewer	= {Vassili N. Kolokol{\cprime}tsov},
   doi		= {10.1016/j.spa.2013.06.003},
   url		= {https://doi.org/10.1016/j.spa.2013.06.003}
 }
@@ -52877,10 +52877,10 @@
 }
 
 @Article{	  samarskiui.sobol:63:examples,
-  author	= {Samarskiu{i}, A. A. and Sobol\cprime , I. M.},
+  author	= {Samarskiu{i}, A. A. and Sobol{\cprime}, I. M.},
   title		= {Examples of numerical calculation of temperature waves},
   journal	= {\v{Z}. Vy\v{c}isl. Mat i Mat. Fiz.},
-  fjournal	= {\v{Z}urnal Vy\v{c}islitel\cprime nou{i} Matematiki i
+  fjournal	= {\v{Z}urnal Vy\v{c}islitel{\cprime}nou{i} Matematiki i
 		  Matemati\v{c}eskou{i} Fiziki},
   volume	= {3},
   year		= {1963},
@@ -52896,7 +52896,7 @@
 		  I.},
   title		= {Fractional integrals and derivatives},
   note		= {Theory and applications, Edited and with a foreword by S.
-		  M. Nikol\cprime skiu{i}, Translated from the 1987 Russian
+		  M. Nikol{\cprime}skiu{i}, Translated from the 1987 Russian
 		  original, Revised by the authors},
   publisher	= {Gordon and Breach Science Publishers, Yverdon},
   year		= {1993},
@@ -55434,7 +55434,7 @@
 }
 
 @Article{	  sudakov.cirel-son:74:extremal,
-  author	= {Sudakov, V. N. and Cirel\cprime son, B. S.},
+  author	= {Sudakov, V. N. and Cirel{\cprime}son, B. S.},
   title		= {Extremal properties of half-spaces for spherically
 		  invariant measures},
   note		= {Problems in the theory of probability distributions, II},
@@ -56204,7 +56204,7 @@
   issn		= {0304-4149},
   mrclass	= {60H15 (58J65)},
   mrnumber	= {1919608},
-  mrreviewer	= {Ya. \={I}. B\={i}lopol\cprime s\cprime ka},
+  mrreviewer	= {Ya. \={I}. B\={i}lopol{\cprime}s{\cprime}ka},
   doi		= {10.1016/S0304-4149(02)00102-3},
   url		= {https://doi.org/10.1016/S0304-4149(02)00102-3}
 }
@@ -57943,7 +57943,7 @@
 }
 
 @Article{	  u:60:new,
-  author	= {U, Hou-sin\cprime },
+  author	= {U, Hou-sin{\cprime}},
   title		= {A new class of parabolic systems of equations},
   journal	= {Soviet Math. Dokl.},
   fjournal	= {Soviet Mathematics. Doklady},
@@ -58213,7 +58213,7 @@
   title		= {The space structure near a blow-up point for semilinear
 		  heat equations: a formal approach},
   journal	= {Zh. Vychisl. Mat. i Mat. Fiz.},
-  fjournal	= {Akademiya Nauk SSSR. Zhurnal Vychislitel\cprime nou{i}
+  fjournal	= {Akademiya Nauk SSSR. Zhurnal Vychislitel{\cprime}nou{i}
 		  Matematiki i Matematicheskou{i} Fiziki},
   volume	= {31},
   year		= {1991},
@@ -60213,7 +60213,7 @@
   issn		= {0012-0456},
   mrclass	= {35R15 (35R60 60J60)},
   mrnumber	= {1698550},
-  mrreviewer	= {Ya. \={I}. B\={i}lopol\cprime s\cprime ka}
+  mrreviewer	= {Ya. \={I}. B\={i}lopol{\cprime}s{\cprime}ka}
 }
 
 @InCollection{	  zabczyk:99:parabolic,
@@ -60348,7 +60348,7 @@
 }
 
 @Book{		  zel-dovich.barenblatt.ea:85:mathematical,
-  author	= {Zel\cprime dovich, Ya. B. and Barenblatt, G. I. and
+  author	= {Zel{\cprime}dovich, Ya. B. and Barenblatt, G. I. and
 		  Librovich, V. B. and Makhviladze, G. M.},
   title		= {The mathematical theory of combustion and explosions},
   note		= {Translated from the Russian by Donald H. McNeill},
@@ -60363,7 +60363,7 @@
 }
 
 @Article{	  zel-dovich.molchanov.ea:87:self-excitation,
-  author	= {Zel\cprime dovich, Ya. B. and Molchanov, S. A. and
+  author	= {Zel{\cprime}dovich, Ya. B. and Molchanov, S. A. and
 		  Ruzmau{i}kin, A. A. and Sokoloff, D. D.},
   title		= {Self-excitation of a nonlinear scalar field in a random
 		  medium},
@@ -60383,7 +60383,7 @@
 }
 
 @InCollection{	  zel-dovich.molchanov.ea:88:intermittency,
-  author	= {Zel\cprime dovich, Ya. B. and Molchanov, S. A. and
+  author	= {Zel{\cprime}dovich, Ya. B. and Molchanov, S. A. and
 		  Ruzmau{i}kin, A. A. and Sokoloff, D. D.},
   title		= {Intermittency, diffusion and generation in a nonstationary
 		  random medium},
@@ -60399,7 +60399,7 @@
 }
 
 @Book{		  zel-dovich.ruzmauikin.ea:90:almighty,
-  author	= {Zel\cprime dovich, Ya. B. and Ruzmauikin, A. A. and
+  author	= {Zel{\cprime}dovich, Ya. B. and Ruzmauikin, A. A. and
 		  Sokoloff, D. D.},
   title		= {The almighty chance},
   series	= {World Scientific Lecture Notes in Physics},
