Add Demonstration screencast

--- a/Demo/Demo.tex
+++ b/Demo/Demo.tex
@@ -33,7 +33,13 @@
 
 \maketitle
 
-This is a demonstration: ~\cite{chen.dalang:12:nonlinear}
+This is a demonstration:~\cite{chen.dalang:12:nonlinear}.
+
+
+Here is the NIST handbook for special function~\cite{olver.lozier.ea:10:nist}.
+
+Here are some books for
+SPDEs~\cite{dalang.khoshnevisan.ea:09:minicourse},~\cite{da-prato.zabczyk:92:stochastic},~\cite{liu.rockner:15:stochastic}.
 
 \printbibliography
 
