--- a/Demo/Demo_biber.bib
+++ b/Demo/Demo_biber.bib
@@ -6,3 +6,50 @@
   TITLE = {The nonlinear stochastic heat equation with rough initial data:a summary of some new results},
 }
 
+@BOOK{da-prato.zabczyk:92:stochastic,
+  AUTHOR = {Da Prato, Giuseppe and Zabczyk, Jerzy},
+  PUBLISHER = {Cambridge University Press, Cambridge},
+  URL = {https://doi.org/10.1017/CBO9780511666223},
+  DATE = {1992},
+  DOI = {10.1017/CBO9780511666223},
+  ISBN = {0-521-38529-6},
+  PAGES = {xviii+454},
+  SERIES = {Encyclopedia of Mathematics and its Applications},
+  TITLE = {Stochastic equations in infinite dimensions},
+  VOLUME = {44},
+}
+
+@BOOK{dalang.khoshnevisan.ea:09:minicourse,
+  AUTHOR = {Dalang, Robert and Khoshnevisan, Davar and Mueller, Carl and Nualart, David and Xiao, Yimin},
+  PUBLISHER = {Springer-Verlag, Berlin},
+  DATE = {2009},
+  ISBN = {978-3-540-85993-2},
+  NOTE = {Held at the University of Utah, Salt Lake City, UT, May 8--19, 2006, Edited by Khoshnevisan and Firas Rassoul-Agha},
+  PAGES = {xii+216},
+  SERIES = {Lecture Notes in Mathematics},
+  TITLE = {A minicourse on stochastic partial differential equations},
+  VOLUME = {1962},
+}
+
+@BOOK{liu.rockner:15:stochastic,
+  AUTHOR = {Liu, Wei and Röckner, Michael},
+  PUBLISHER = {Springer, Cham},
+  URL = {https://doi.org/10.1007/978-3-319-22354-4},
+  DATE = {2015},
+  DOI = {10.1007/978-3-319-22354-4},
+  ISBN = {978-3-319-22353-7; 978-3-319-22354-4},
+  PAGES = {vi+266},
+  SERIES = {Universitext},
+  TITLE = {Stochastic partial differential equations: an introduction},
+}
+
+@BOOK{olver.lozier.ea:10:nist,
+  AUTHOR = {Olver, Frank W. J. and Lozier, Daniel W. and Boisvert, Ronald F. and Clark, Charles W.},
+  PUBLISHER = {U.S. Department of Commerce, National Institute of Standards and Technology, Washington, DC; Cambridge University Press, Cambridge},
+  DATE = {2010},
+  ISBN = {978-0-521-14063-8},
+  NOTE = {With 1 CD-ROM (Windows, Macintosh and UNIX)},
+  PAGES = {xvi+951},
+  TITLE = {N{IST} handbook of mathematical functions},
+}
+
